--- a/FitCook/Base.lproj/Main.storyboard
+++ b/FitCook/Base.lproj/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Ingredients View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FitCook" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="IngredientsViewController" customModule="FitCook" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -19,13 +19,13 @@
                                 <rect key="frame" x="0.0" y="88" width="375" height="690"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="c1Z-Sx-IgI">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="87.333333333333329"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="259-h2-tj8">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="87.333333333333329"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ингредиент" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aj4-8w-6ib">
-                                                        <rect key="frame" x="20" y="8" width="335" height="34"/>
+                                                        <rect key="frame" x="20" y="8" width="335" height="71.333333333333329"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                                         <connections>
@@ -39,7 +39,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </stackView>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Uog-0L-4vr">
-                                        <rect key="frame" x="0.0" y="50" width="375" height="640"/>
+                                        <rect key="frame" x="0.0" y="87.333333333333314" width="375" height="602.66666666666674"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="listCell" rowHeight="44" id="5Xg-aB-ge5" customClass="IngredientsListViewCell" customModule="FitCook" customModuleProvider="target">
@@ -101,7 +101,7 @@
                                                     <outlet property="nameLabel" destination="MTq-gV-6eB" id="cfM-tr-0Eh"/>
                                                     <outlet property="totalKcalLabel" destination="m2q-qC-ueJ" id="W6b-uM-7LS"/>
                                                     <outlet property="weightLabel" destination="T9d-5a-MLX" id="An6-Wa-eG0"/>
-                                                    <segue destination="9he-fb-T1v" kind="show" trigger="accessoryAction" id="IVy-fs-qQ5"/>
+                                                    <segue destination="9he-fb-T1v" kind="show" identifier="toIngredientDetail" trigger="accessoryAction" id="IVy-fs-qQ5"/>
                                                 </connections>
                                             </tableViewCell>
                                         </prototypes>
@@ -153,7 +153,7 @@
         <!--Milk-->
         <scene sceneID="EXg-TW-6p2">
             <objects>
-                <viewController id="9he-fb-T1v" sceneMemberID="viewController">
+                <viewController id="9he-fb-T1v" customClass="IngredientDetailViewController" customModule="FitCook" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cGZ-6X-QXJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -197,6 +197,9 @@
                                         <rect key="frame" x="0.0" y="106" width="331" height="41"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <state key="normal" title="Сохранить"/>
+                                        <connections>
+                                            <action selector="saveButtonPressed:" destination="9he-fb-T1v" eventType="touchUpInside" id="KCb-Pp-NKo"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -210,6 +213,10 @@
                         <viewLayoutGuide key="safeArea" id="8Kb-dV-2yT"/>
                     </view>
                     <navigationItem key="navigationItem" title="Milk" id="iIG-QQ-lSI"/>
+                    <connections>
+                        <outlet property="kcalTextField" destination="sXJ-nm-yhc" id="QvA-y7-Vpq"/>
+                        <outlet property="weightTextField" destination="H7l-iP-HSY" id="EjX-aR-Qbj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uqE-c7-w8X" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
